# discord-quizbot

./: README.md  bot.py  pyproject.toml
quizzy/: asgi.py  settings.py  urls.py  wsgi.py
quizzy/quiz/: admin.py  apps.py  models.py
quizzy/quiz/migrations/: 0001_initial.py
