[tool.poetry]
name = "discord-quizbot"
version = "0.1.0"
description = ""
authors = ["Andrei Ujica <andrei.uji22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.0.1"
requests = "^2.28.1"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
